--- a/pages/chat.html
+++ b/pages/chat.html
@@ -15,13 +15,16 @@
   <link rel="stylesheet" href="../styles/main.css">
   <link rel="stylesheet" href="../components/topbar.css">
   <link rel="stylesheet" href="../styles/chat.css">
+  <link rel="stylesheet" href="../styles/background.css">
 </head>
+
 
 <body>
 
   <!-- Scripts (Config & Base) -->
   <script src="../config.js"></script>
   <script src="../scripts/settings.js"></script>
+  <script src="../scripts/background.js"></script>
 
   <script src="../scripts/notifications.js"></script>
 
