--- a/pages/code.html
+++ b/pages/code.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../components/topbar.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <link rel="stylesheet" href="../styles/code.css">
+    <link rel="stylesheet" href="../styles/background.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+    <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 
 <body>
     <script src="../config.js"></script>
     <script src="../scripts/settings.js"></script>
+    <script src="../scripts/background.js"></script>
     <script src="../scripts/notifications.js"></script>
     <script src="../components/topbar.js"></script>
 
