--- a/staticsjv2/NT.html
+++ b/staticsjv2/NT.html
@@ -5,8 +5,10 @@
   <meta charset="UTF-8">
   <title>New Tab</title>
   <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="../styles/background.css">
   <script src="../config.js"></script>
   <script src="../scripts/settings.js"></script>
+  <script src="../scripts/background.js"></script>
   <script src="../scripts/quotes.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
