--- a/pages/movies.html
+++ b/pages/movies.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../components/topbar.css">
     <link rel="stylesheet" href="../styles/movies.css">
+    <link rel="stylesheet" href="../styles/background.css">
 </head>
 
 <body>
@@ -89,6 +90,7 @@
     <script src="../scripts/notifications.js"></script>
     <script src="../config.js"></script>
     <script src="../scripts/settings.js"></script>
+    <script src="../scripts/background.js"></script>
     <script src="../scripts/movies.js"></script>
 
     <script src="../components/footer.js"></script>
