--- a/pages/games.html
+++ b/pages/games.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../components/topbar.css">
+    <link rel="stylesheet" href="../styles/background.css">
     <style>
         .games-page {
             min-height: 100vh;
@@ -260,6 +261,7 @@
 
             <div class="select-wrapper">
                 <select id="lib-select">
+                    <option value="multi">Multi (Default)</option>
                     <option value="gnmath">Gnmath</option>
                     <option value="ugs">UGS</option>
                 </select>
@@ -303,6 +305,7 @@
 
     <script src="../config.js"></script>
     <script src="../scripts/settings.js"></script>
+    <script src="../scripts/background.js"></script>
     <script src="../scripts/quotes.js"></script>
     <script src="../scripts/notifications.js"></script>
     <script src="../components/footer.js"></script>
