--- a/pages/player.html
+++ b/pages/player.html
@@ -65,6 +65,7 @@
             <div class="player-info">
                 <h1 class="player-title" id="player-title">Loading...</h1>
                 <p class="player-desc" id="player-desc"></p>
+                <p class="theater-message" id="theater-message" style="display:none; text-align: center; color: var(--text-muted); font-size: 1.125rem; margin-top: 16px;">Enjoy your movie!</p>
             </div>
         </div>
     </div>
