--- a/staticsjv2/NT.html
+++ b/staticsjv2/NT.html
@@ -12,6 +12,8 @@
   <script src="../scripts/quotes.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
+
     * {
       box-sizing: border-box;
       margin: 0;
@@ -40,7 +42,7 @@
       font-weight: 600;
       letter-spacing: -2px;
       margin-bottom: 8px;
-      color: var(--accent);
+      color: var(--text);
     }
 
     .date {
@@ -60,7 +62,11 @@
       width: 100%;
       max-width: 500px;
       margin-bottom: 40px;
-      transition: all 0.3s ease;
+      transition: all 0.2s ease;
+    }
+
+    .search-box:focus-within {
+      border-color: var(--border-light);
     }
 
     body.phantom-bg-active .search-box {
@@ -103,7 +109,7 @@
     .shortcuts {
       display: grid;
       grid-template-columns: repeat(5, 1fr);
-      gap: 16px;
+      gap: 12px;
       max-width: 500px;
       width: 100%;
     }
@@ -115,6 +121,13 @@
       gap: 8px;
       text-decoration: none;
       cursor: pointer;
+      padding: 8px;
+      border-radius: 12px;
+      transition: all 0.15s;
+    }
+
+    .shortcut:hover {
+      background: var(--surface-hover);
     }
 
     .shortcut-icon {
@@ -139,6 +152,7 @@
     .shortcut:hover .shortcut-icon {
       background: var(--surface-hover);
       transform: translateY(-2px);
+      border-color: var(--border-light);
     }
 
     .shortcut-icon img {
@@ -178,24 +192,53 @@
     .loader {
       position: fixed;
       inset: 0;
-      background: rgba(0, 0, 0, 0.9);
+      background: rgba(10, 10, 10, 0.6);
+      backdrop-filter: blur(15px);
+      -webkit-backdrop-filter: blur(15px);
       display: none;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-      z-index: 100;
+      z-index: 10000;
     }
 
     .loader.show {
       display: flex;
     }
 
-    .spinner {
-      width: 32px;
-      height: 32px;
-      border: 2px solid var(--border);
-      border-top-color: var(--accent);
+    .loader-logo {
+      font-size: 2.5rem;
+      font-weight: 700;
+      margin-bottom: 24px;
+      display: flex;
+      align-items: center;
+      gap: 14px;
+    }
+
+    .loader-logo i {
+      color: var(--text-muted);
+    }
+
+    .loader-logo span {
+      background: linear-gradient(90deg, var(--text) 0%, var(--text-muted) 40%, var(--text-dim) 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+    }
+
+    .loader-spinner {
+      width: 40px;
+      height: 40px;
+      border: 3px solid var(--border);
+      border-top-color: var(--text-muted);
       border-radius: 50%;
       animation: spin 0.8s linear infinite;
+    }
+
+    .loader-text {
+      margin-top: 16px;
+      color: var(--text-dim);
+      font-size: 0.875rem;
     }
 
     @keyframes spin {
@@ -282,6 +325,12 @@
       $('#loader').classList.add('show');
       window.parent?.postMessage({ type: 'navigate', url }, '*');
     };
+
+    // Apply settings
+    if (window.Settings) Settings.apply();
+
+    // Initialize quotes
+    if (window.Quotes) Quotes.init(true);
 
     // Clock
     function updateClock() {
