--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5LMBC27Z" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
-
+    <!-- End Google Tag Manager (noscript) -->
     <!-- First Visit Cloak Layer -->
     <div id="fv-cloak" class="neterror">
         <div id="main-frame-error" class="interstitial-wrapper">
