--- a/pages/games.html
+++ b/pages/games.html
@@ -20,7 +20,7 @@
 
     <div class="games-page">
         <header class="page-header">
-            <h1 class="page-title">Games libarry</h1>
+            <h1 class="page-title">Games Library</h1>
             <p class="page-subtitle" id="quote-display">Loading...</p>
         </header>
 
