--- a/pages/extra.html
+++ b/pages/extra.html
@@ -128,8 +128,8 @@
             <div class="license-notice">
                 <i class="fa-solid fa-scale-balanced"></i>
                 <div class="license-notice-content">
-                    <h3>GNU GPL v3.0</h3>
-                    <p>This project is open source. You may use, modify, and distribute it under the GNU GPL v3.0
+                    <h3>GNU AGPL v3.0</h3>
+                    <p>This project is open source. You may use, modify, and distribute it under the GNU AGPL v3.0
                         license.</p>
                 </div>
             </div>
