--- a/pages/music.html
+++ b/pages/music.html
@@ -132,6 +132,9 @@
                 </div>
             </section>
         </main>
+        <!-- Hidden button to toggle YT player visibility -->
+        <button id="toggleYTBtn" class="yt-toggle-btn" title="Toggle Player View"><i
+                class="fa-solid fa-video"></i></button>
     </div>
 
     <div class="fallback-container" id="fallbackContainer">
